# my_dissertation

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  PhDViewer.qgz  README.md  blacklist.py  camels_ru.yml  codebook.toml  dis_env_mac.yml  every_basin.txt  geo_data  geo_env.yml  icon_dw.yml  pixi.toml  pyproject.toml  requirements.txt  setup_check.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/instructions/: Python_Instruction_OPTIMIZED.instructions.md  copilot-instructions.md
.github/workflows/: marimo-page.yml
ais_parsers/: ais_parser.ipynb  level_parser.py  parser.py
ais_parsers/data/: height_gauge.csv  test.csv  test_2.csv
ais_parsers/scripts/: ais_parsers.py
archive/: hydro_metrics_legacy.py  rfr_lobo.py
archive/ais_parsers/: ais_parser.ipynb
archive/conceptual_runs/: gr4j_train.py  hbv_gr4j_results.ipynb
archive/conclusions/: geo_classifications.ipynb
archive/data_builders/: ru_db_example.ipynb
archive/esimo_loader/: main.py
archive/geometry_creator/: mask_creation.py
archive/hydroatlas_parser/: main.py
archive/meteo_grids_parser/: main.py
archive/meteo_station_comparison/: draw_results.ipynb
archive/neural_forecast/: blind_basins.txt  blind_forecast.ipynb  common_index.csv  openf_basins.txt  static_impact.ipynb  test.py  test_neural.ipynb  test_single.py  train.py  train_single.py  train_with_cmip.ipynb
archive/notebooks/: DataPreparation.ipynb  HybridClusterAnalysis.ipynb  MetricsOverview.ipynb
archive/test_meteo_input/: basins_train.txt  basins_val.txt  neural_hydrology.ipynb  nh_test.py
archive/visualizations/: openf_basins.txt  russia_run.ipynb
basin_districts/: Basin_regions_with_numbers.points  reference_map.qgz
conceptual_runs/: final_gr4j.csv  final_hbv.csv  gr4j_calibration.py  gr4j_error_full.txt  gr4j_train.py  hbv_cal_new.py  hbv_calibration.py  hbv_error_full.txt  hbv_gr4j_results.ipynb  hbv_train.py  main.py  main_rfr.py  model_train.ipynb  res_gr4j.csv  res_gr4j_2.csv  res_gr4j_full.csv  res_hbv.csv  res_hbv_2.csv  res_hbv_full.csv  res_rfr.csv  res_rfr_cv.csv  test_file.csv
conceptual_runs/calibration/: calibrator.py  gr4j_calibrator.py  hbv_calibrator.py  model_setups.py  rfr_calibrator.py
conceptual_runs/hydro_models/: cema_neige.py  gr4j_cema_neige.py  hbv.py
conceptual_runs/model_scripts/: cema_neige.py  gr4j_cema_neige.py  hbv.py
conceptual_runs/scripts/: data_readers.py  logger.py
conclusions/: ChapterOnePlots.ipynb  ChapterThreePlots.ipynb  ChapterTwoPlots.ipynb  geo_classifications.ipynb  geo_related_analysis.ipynb  model_testing.ipynb
conclusions/scripts/: hydro_metrics.py  model_runners.py  processing.py
conclusions/tables/: DELETE_NSE.csv  DELETE_NSE_HBV.csv  GR4J_ayzel_res.csv  GR4J_res_mle_kge.csv  GR4J_res_mle_logNSE.csv  (+52 more)
configs/: level_forecast.yaml  multi_gauge.yaml  single_gauge.yaml
darts_forecast/: check_results.py  check_results_multi.py  check_results_predict_single.py  check_results_single.ipynb  darts_tft_single_gauge_train.py  darts_tft_train.py  single_gauge_predict.csv  some_tft_res_single.csv  test_darts.ipynb
data_builders/: concat_by_gauge.ipynb  config.yml  main.py  mask_creation.py  meteo_grid.py  meteo_grid_calculation.py  river_creator.py  ru_db_example.ipynb  watershed_creator.py
docs/: CONCEPTUAL_MODELS.md  HYDROLOGICAL_SIGNATURES_INTERPRETATION.md  MACHINE_LEARNING_MODELS.md  MODELS_OVERVIEW.md  PLOTTING_FUNCTIONS_USAGE.md  QUICK_START_IMPROVEMENTS.md  READY_TO_RUN.md  SIGNATURE_ANALYSIS_SUMMARY.md  gr4j_calibration_improvement_plan.md
esimo_loader/: data.csv  main.py  test.ipynb
forecast/: blind_errors.txt  cmip_ranks.json  comparison.py  comparison_script.ipynb  error_file.txt  evaluate_res.py  inference_run.py  main.py  main_blind.py  main_by_gauge.py  model_launch.ipynb  test_pycast.ipynb  test_study.pkl
geometry_creator/: greater_100_ws.py  main.py  mask_creation.ipynb  mask_creation.py
hydro_atlas_parser/: featureXtractorV2.ipynb
hydroatlas_parser/: main.py
icon_parser/: README.md  icon_loader.py  icon_merger_kamchatka.py  icon_merger_russia.py  main.py  test.ipynb
input_creator/: bad_gauges.txt  example_data_worker.ipynb  main.py  test.py
meteo_grids_parser/: README.md  corrupted_gauges.txt  main.py  meteo_grids.yml  test.ipynb
meteo_station_comparison/: draw_results.ipynb  main.py  precipitation_table.csv  temperature_table.csv
metric_viewer/: hydro.ipynb
model_itself/: model_launch.ipynb
neural_forecast/: basins_test.txt  basins_train.txt  basins_val.txt  blind_basins.txt  blind_forecast.ipynb  cmip_ranks.json  delete_me_test.txt  every_basin.txt  inner_states_lstm.ipynb  model_config.yml  static_impact.ipynb  test.py  test_neural.ipynb  test_single.py  train.py  train_single.py  train_with_cmip.ipynb
notebooks/: ChapterOne.py  ChapterThree.ipynb  ChapterTwo.ipynb  ClusterExperiments.ipynb  DataPreparation.ipynb  MetricsOverview.ipynb  NewChapterOne.ipynb  c1_0_GeoClustering.ipynb  c1_0_GeoClusters.py  c1_1_HydroClusters.py  c1_2_HybridClustering.ipynb  c1_GeoClustering.ipynb  c1_HybridClustering.ipynb  c2_ChapterTwoAnalytics.ipynb  c2_ChapterTwoQualityGrade.ipynb  c2_FineTuning.ipynb  c2_GeneralizationGapAnalysis.ipynb  c2_model_comparison.ipynb  c3_BlindMetrics.ipynb  c3_ChapterThree.ipynb  c3_ExtractLSTMStates.ipynb  c3_LSTMStates_README.md  c3_LSTMStates_v2.ipynb  exploratory_analysis.ipynb  tmp_VerifySeries.ipynb
scripts/: export_notebook.py  fix-permissions  gr4j_optuna.py  gr4j_train.py  gr4j_train_simple.py  hbv_train.py  hbv_train_simple.py  lstm_different_test_experiment.py  lstm_train_simple.py  predict.py  rfr_spatial_train.py  rfr_spatial_train_simple.py  rfr_train.py  rfr_train_simple.py  update_era5l_data.py
src/: __init__.py
test/: test_gr4j_improved.py  test_hbv_optimized.py  test_rfr_features.py
test_meteo_input/: basins_test.txt  basins_train.txt  basins_val.txt  neural_hydrology.ipynb  nh_test.py  openf_basins.txt
tests/: test_config.py  test_evaluation_metrics.py  test_utils.py
visualizations/: basins_val.txt  openf_basins.txt  russia_run.ipynb  visualisation.ipynb
(+1066 files in other folders)
