[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dissertation"
version = "0.1.0"
description = "Discharge model comparison for Russian river basins"
authors = [{ name = "Dmitrii Abramov", email = "dmbrmv96@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 105
[tool.ruff.lint]
# Core PEP 8/pycodestyle + pragmatic extras.
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # Pyflakes
  "I",    # isort (import sorting)
  "N",    # pep8-naming
  "D",    # pydocstyle (docstrings)
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "S",    # flake8-bandit (security)
  "C4",   # flake8-comprehensions
  "Q",    # flake8-quotes
  "T20",  # flake8-print
  "A",    # flake8-builtins (shadowing builtins)
  "C90",  # mccabe (cyclomatic complexity)
  "PIE",  # flake8-pie (small correctness wins)
]
ignore = [
  "E203",  # whitespace before ':' — Black/Ruff-formatter compatible
  "D100",  # missing docstring in public module
  "D104",  # missing docstring in public package
  "S101",  # use of assert (we allow in tests; see per-file too)
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "D100", "D101", "D102", "D103", "T20"]
"scripts/**/*" = ["T20"]
"**/*.ipynb" = ["D", "T20"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["floodforecast"]
split-on-trailing-comma = true
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
# Google style docstrings; keep concise one-line summaries.
convention = "google"

[tool.ruff.lint.mccabe]
# PEP 8 nudges toward simplicity; cap complexity.
max-complexity = 10

[tool.ruff.format]
# Match quote policy with lint rules and keep docstring code tidy.
quote-style = "double"
docstring-code-format = true
# PEP 8 suggests ~72 columns for comments/docstrings; apply to fenced code in docstrings.
docstring-code-line-length = 72

[tool.pyright]
typeCheckingMode = "basic"
exclude = [
  "**/data",
  "/data",
  "**/__pycache__",
  ".venv",
  "build",
  "dist",
]
reportMissingImports = true
reportMissingTypeStubs = false


dependencies = [
  "gdal>=3.12.1,<4",
  "pysheds>=0.5,<0.6",
  "numpy>=1.26.4,<1.26.5",
  "numba>=0.59.1,<0.59.2",
  "marimo>=0.19.7,<0.20",
  "altair>=6.0.0,<7",
  "vegafusion>=2.0.2,<3",
  "vl-convert-python>=1.9.0,<2",
  "openai>=2.16.0,<3",
  "mcp>=1",
  "pydantic>=2",
  "nbformat>=5.10.4,<6",
  "websockets>=16.0,<17",
  "duckdb>=1.4.4,<2",
  "sqlglot>=28.8.0,<29",
  "geopandas>=1.1.2,<2",
  "matplotlib>=3.10.8,<4",
  "analytics-python>=2.2.3,<3",
  "ipykernel>=7.1.0,<8",
  "tqdm>=4.67.3,<5",
  "ipywidgets>=8.1.8,<9",
  "seaborn>=0.13.2,<0.14",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.0,<0.16",
  "pytest>=9.0.2,<10",
  "python-lsp-server>=1.14.0,<2",
  "python-lsp-ruff>=2.3.0,<3",
  "ty>=0.0.14,<0.0.15",
  "basedpyright>=1.37.4,<2",
]